# blog

./: .clever.json  .gitignore  .htaccess  LICENSE  Makefile  Roadmap  TODO  hakyll.hs  index.html  keruspe-blog.cabal  keybase.txt  new_post.sh  posts.html  publish.sh  rss.xml  stack.yaml
css/: default.css
data/: .htaccess  resume.html  robots.txt
files/: add-me.sh  gpaste-1.1.tar.xz  gpaste-1.3.tar.xz  gpaste-1.6.tar.xz  gpaste-2.5.tar.xz  gpaste-2.8.1.tar.xz  gpaste-2.9.1.tar.xz  gpaste-2.99.2.tar.xz  gpaste-3.0.1.tar.xz  gpaste-3.0.tar.xz  id_ed25519.pub  id_rsa.pub
posts/: 2012-11-21-home-sweet-home.html  2012-11-21-home-sweet-home.md  2012-11-22-knowing-your-system-part-basics-on-unixlike-systems.html  2012-11-22-knowing-your-system-part-basics-on-unixlike-systems.md  2012-11-29-knowing-your-system-part-the-init-process.html  2012-11-29-knowing-your-system-part-the-init-process.md  2012-12-01-gpaste-released.html  2012-12-01-gpaste-released.md  2012-12-04-facron-fanotify-cron-system.html  2012-12-04-facron-fanotify-cron-system.md  2012-12-07-facron-released.html  2012-12-07-facron-released.md  2012-12-10-knowing-your-system---part-3---source-based-distributions-the-gentoo-example.html  2012-12-10-knowing-your-system---part-3---source-based-distributions-the-gentoo-example.md  2012-12-13-knowing-your-system---part-4---falling-in-love-with-paludis.html  2012-12-13-knowing-your-system---part-4---falling-in-love-with-paludis.md  2012-12-20-knowing-your-system---part-5---source-based-distributions:-the-binary-way.html  2013-01-01-systemd-as-a-session-manager.html  (+288 more)
(+247 files in other folders)
