name:                keruspe-blog
version:             0.1.0.0
synopsis:            Keruspe's blog written with hakyll
homepage:            http://www.imagination-land.org/
license:             BSD2
license-file:        LICENSE
author:              Marc-Antoine Perennou
maintainer:          Marc-Antoine@Perennou.com
category:            Web
build-type:          Simple
cabal-version:       >=1.24

executable blog
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base     >=4.8 && <5,
    filepath >=1.4 && <1.5,
    hakyll   >=4.8 && <5
